--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,1 @@
-remote_theme: sighingnow/jekyll-gitbook
-
-# TOC 設定を追加
-toc:
-  enabled: true
-  h_min: 1   # 最小見出しレベル (h1)
-  h_max: 3   # 最大見出しレベル (h3)
+theme: Minima
